[package]
name = "netpulse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "3.2.12", features = ["derive"] }
colored = "2.0.0"
regex = "1.6.0"
serde_json = "1.0.82"
